feat/go : Add hackathon CRUD and add docker environnement.
