# back/main.go
@@ -1,70 +1,87 @@
 package main
 
 import (
+	"challenges4/docs"
 	"challenges4/models"
+	"challenges4/routes"
 	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/joho/godotenv"
 	"github.com/madkins23/gin-utils/pkg/ginzero"
-	"github.com/swaggo/files"
-	"github.com/swaggo/gin-swagger"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 	"golang.org/x/crypto/bcrypt"
 	"gorm.io/driver/postgres"
 	"gorm.io/gorm"
 	"log"
 	"os"
+	"time"
 )
 
-// @title     Gingo Bookstore API
-// @Summary Get hello
-// @Description get string
-// @ID get-string
-// @Produce  json
-// @Success 200 {string} string	"ok"
-// @Router / [get]
+func connectDatabase() (*gorm.DB, error) {
+	dsn := fmt.Sprintf("host=%s port=%s user=%s password=%s dbname=%s sslmode=disable",
+		os.Getenv("DB_HOST"),
+		os.Getenv("DB_PORT"),
+		os.Getenv("DB_USER"),
+		os.Getenv("DB_PASSWORD"),
+		os.Getenv("DB_NAME"))
+
+	// Try to connect to the database 5 times
+	for i := 0; i < 5; i++ {
+		db, err := gorm.Open(postgres.Open(dsn), &gorm.Config{})
+		if err == nil {
+			return db, nil
+		}
+		log.Printf("Failed to connect to the database. Retrying in 5 seconds... (attempt %d/5)", i+1)
+		time.Sleep(5 * time.Second)
+	}
+	return nil, fmt.Errorf("failed to connect to the database after 5 attempts")
+}
+
+// @title BananaGang API
+// @description Ceci est un exemple de serveur API Hackathon.
+// @version 1.0
+// @BasePath /
 func main() {
+	docs.SwaggerInfo.Title = "BananaGang API"
+	docs.SwaggerInfo.Description = "Documentation de l'API pour les Hackathons."
+	docs.SwaggerInfo.Version = "1.0"
+	docs.SwaggerInfo.BasePath = "/"
+	docs.SwaggerInfo.Schemes = []string{"http", "https"}
 	r := gin.New()
 	r.Use(ginzero.Logger())
 
-	// Swagger
-	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	//connexion bd
+	//DB connection
 	err := godotenv.Load()
 	if err != nil {
-		log.Fatal("Erreur lors du chargement du fichier .env")
+		log.Fatal("Error loading .env file")
 	}
 
-	// Récupérer les informations de connexion à la base de données à partir des variables d'environnement
-	dsn := "host=" + os.Getenv("DB_HOST") + " port=" + os.Getenv("DB_PORT") + " user=" + os.Getenv("DB_USER") + " password=" + os.Getenv("DB_PASSWORD") + " dbname=" + os.Getenv("DB_NAME") + " sslmode=disable"
-
-	// Ouvrir une connexion à la base de données
-	db, err := gorm.Open(postgres.Open(dsn), &gorm.Config{})
+	db, err := connectDatabase()
 	if err != nil {
-		log.Fatal(err)
+		log.Fatalf("Failed to connect to the database: %v", err)
 	}
+	log.Println("Connected to the database !")
 
-	log.Println("Connexion à la base de données réussie !")
-
-	// Automatiser la migration de la base de données
+	// Migrate the schema
 	err = db.AutoMigrate(&models.User{})
 	if err != nil {
-		log.Fatal("Erreur lors de la migration de la base de données:", err)
+		log.Fatal("Failed to migrate the database: ", err)
 	}
 
-	log.Println("Migration de la base de données réussie !")
-	// Mot de passe à hacher
+	log.Println("Database migrated !")
+	// Password hashing
 	password := "test1234"
 
-	// Générer un hachage bcrypt pour le mot de passe
+	// Hash the password
 	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
 	if err != nil {
-		fmt.Println("Erreur lors du hachage du mot de passe:", err)
+		fmt.Println("Failed to hash the password: ", err)
 		return
 	}
 	nouvelUtilisateur := models.User{Nom: "Dupont", Prenom: "Alice", Login: "aliced", Password: string(hashedPassword)}
 	db.Create(&nouvelUtilisateur)
-	//connexion bd
+	// Create a new user
 
 	router := gin.Default()
 
@@ -81,5 +98,15 @@ func main() {
 		c.String(200, "pong")
 	})
 
-	r.Run(":8080")
+	routes.HackathonRoutes(r, db)
+	if err := db.AutoMigrate(&models.Hackathon{}); err != nil {
+		log.Fatal("Failed to migrate the database: ", err)
+	}
+
+	// Swagger
+	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	if err := r.Run(":8080"); err != nil {
+		log.Fatal("Failed to start server: ", err)
+	}
 }
